--- a/web/chat.html
+++ b/web/chat.html
@@ -33,6 +33,10 @@ limitations under the License.
                                     ' <span class="nickname">&lt;' + json[i].nickname + '&gt;</span>: ' + json[i].message + '</p>');
                     }
                 };
+                
+                websocket.onerror = function(evt) {
+                    console.log(evt.data);                    
+                };
 
                 function sendMessage() {
                     var data = {
@@ -41,10 +45,10 @@ limitations under the License.
                         "timestamp": new Date().toISOString()
                     };
                     var json = JSON.stringify(data);
-                    if (websocket.readyState !== 1) {
-                        $('#chatwindow').html('');
-                        websocket = new WebSocket(wsUri);
-                    }
+//                    if (websocket.readyState !== 1) {
+//                        $('#chatwindow').html('');
+//                        websocket = new WebSocket(wsUri);
+//                    }
                     websocket.send(json);
                     $('#input').val('');
                 }
